<resources>
    <string name="app_name">MusicalApp</string>

    <!-- Category name for the music categories -->
    <string name="welcome">Choose music you want to listen</string>
    <string name="polish">Polish Traditional Music</string>
    <string name="italian">Italian Traditional Music</string>
    <string name="ukrainian">Ukrainian Traditional Music</string>
    <string name="ukrainian2">Ukrainian Traditional\nMusic</string>
    <string name="central">Central Asia Traditional Music</string>
    <string name="current">Now is playing...</string>
    <string name="title_key">title_key</string>
    <string name="name_key">name_key</string>
    <string name="image_key">image_key</string>

</resources>
