<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        tools:context="com.example.android.musicalstructureapp.MainActivity">

        <TextView
            style="@style/welcome"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/polish_music"
            style="@style/categoryStyle"
            android:background="@color/colorPrimary"
            android:text="@string/polish" />

        <TextView
            android:id="@+id/italian_music"
            style="@style/categoryStyle"
            android:background="@color/colorPrimary"
            android:text="@string/italian" />

        <TextView
            android:id="@+id/central_asia_music"
            style="@style/categoryStyle"
            android:background="@color/colorPrimary"
            android:text="@string/central" />

        <TextView
            android:id="@+id/ukrainian_music"
            style="@style/categoryStyle"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/ukrainian" />
    </LinearLayout>
</ScrollView>
